Testing up GH actions, spacing and grammar fixes

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ html, body {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  padding: 0.25rem 0.25rem;
+  padding: 0.25rem 0px 0.25rem 0px;
   text-align: center;
 }
 
